--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,108 @@
-@Book{P2,
-  author     = "Chen-Chung Chang and H. Jerome Keisler",
-  title      = "Model Theory",
-  publisher  = "North-Holland",
-  edition   = {Third},
-  year       = 1990,
+
+@inproceedings{parkhurst_single_2006,
+	title = {From {Single} {Core} to {Multi}-{Core}: {Preparing} for a new exponential},
+	shorttitle = {From {Single} {Core} to {Multi}-{Core}},
+	doi = {10.1109/ICCAD.2006.320067},
+	abstract = {In the past, processor design trends were dominated by increasingly complex feature sets, higher clock speeds, growing thermal envelopes and increasing power dissipation. Recently, clock speeds have tapered and thermal and power dissipation envelopes have remained flat. However, the demand for increasing performance continues which has fueled the move to integrated multiple processor (multi-core) designs. This paper discusses this trend towards multi-core processor designs, the design challenges that accompany it and a view of the research required to support it},
+	booktitle = {2006 {IEEE}/{ACM} {International} {Conference} on {Computer} {Aided} {Design}},
+	author = {Parkhurst, Jeff and Darringer, John and Grundmann, Bill},
+	month = nov,
+	year = {2006},
+	note = {ISSN: 1558-2434},
+	keywords = {Clocks, Frequency, Gate leakage, Microprocessors, Moore's Law, Multicore processing, Permission, Power dissipation, Process design, Threshold voltage},
+	pages = {67--72},
+	file = {IEEE Xplore Abstract Record:/Users/neilweidinger/Zotero/storage/3B2JNI3T/4110155.html:text/html;Full Text:/Users/neilweidinger/Zotero/storage/JFR9BAR5/Parkhurst et al. - 2006 - From Single Core to Multi-Core Preparing for a ne.pdf:application/pdf},
 }
 
-@inproceedings{P1,
-  author    = {Hiroki Arimura},
-  title     = {Learning Acyclic First-Order Horn Sentences from Entailment},
-  booktitle = {Proc. of the 8th Intl. Conf. on Algorithmic Learning Theory, ALT '97},
-  year      = {1997},
-  pages     = {432-445},
-  ee        = {http://dx.doi.org/10.1007/3-540-63577-7_59},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+@inproceedings{gepner_multi-core_2006,
+	title = {Multi-{Core} {Processors}: {New} {Way} to {Achieve} {High} {System} {Performance}},
+	shorttitle = {Multi-{Core} {Processors}},
+	doi = {10.1109/PARELEC.2006.54},
+	abstract = {Multi-core processors represent an evolutionary change in conventional computing as well setting the new trend for high performance computing (HPC) - but parallelism is nothing new. Intel has a long history with the concept of parallelism and the development of hardware-enhanced threading capabilities. Intel has been delivering threading-capable products for more than a decade. The move toward chip-level multiprocessing architectures with a large number of cores continues to offer dramatically increased performance and power characteristics. Nonetheless, this move also presents significant challenges. This paper describes how far the industry has progressed and evaluates some of the challenges we are facing with multi-core processors and some of the solutions that have been developed},
+	booktitle = {International {Symposium} on {Parallel} {Computing} in {Electrical} {Engineering} ({PARELEC}'06)},
+	author = {Gepner, P. and Kowalik, M.F.},
+	month = sep,
+	year = {2006},
+	keywords = {Clocks, Computer architecture, Frequency, High performance computing, History, Microarchitecture, Multicore processing, Parallel processing, Silicon, System performance},
+	pages = {9--13},
+	file = {IEEE Xplore Full Text PDF:/Users/neilweidinger/Zotero/storage/DNN82CKG/Gepner and Kowalik - 2006 - Multi-Core Processors New Way to Achieve High Sys.pdf:application/pdf},
+}
+
+@article{hennessy_new_2019,
+	title = {A new golden age for computer architecture},
+	volume = {62},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/3282307},
+	doi = {10.1145/3282307},
+	abstract = {Innovations like domain-specific hardware, enhanced security, open instruction sets, and agile chip development will lead the way.},
+	number = {2},
+	urldate = {2021-10-24},
+	journal = {Communications of the ACM},
+	author = {Hennessy, John L. and Patterson, David A.},
+	month = jan,
+	year = {2019},
+	pages = {48--60},
+	file = {Full Text PDF:/Users/neilweidinger/Zotero/storage/LBHZTUSP/Hennessy and Patterson - 2019 - A new golden age for computer architecture.pdf:application/pdf},
+}
+
+@article{conte_rebooting_2017,
+	title = {Rebooting {Computing}: {The} {Road} {Ahead}},
+	volume = {50},
+	issn = {0018-9162},
+	shorttitle = {Rebooting {Computing}},
+	url = {http://ieeexplore.ieee.org/document/7807179/},
+	doi = {10.1109/MC.2017.8},
+	number = {1},
+	urldate = {2021-10-24},
+	journal = {Computer},
+	author = {Conte, Thomas M. and DeBenedictis, Erik P. and Gargini, Paolo A. and Track, Elie},
+	month = jan,
+	year = {2017},
+	pages = {20--29},
+	file = {Conte et al. - 2017 - Rebooting Computing The Road Ahead.pdf:/Users/neilweidinger/Zotero/storage/PC8KZ5JL/Conte et al. - 2017 - Rebooting Computing The Road Ahead.pdf:application/pdf},
+}
+
+@article{venu_multi-core_2011,
+	title = {Multi-core processors - {An} overview},
+	url = {http://arxiv.org/abs/1110.3535},
+	abstract = {Microprocessors have revolutionized the world we live in and continuous efforts are being made to manufacture not only faster chips but also smarter ones. A number of techniques such as data level parallelism, instruction level parallelism and hyper threading (Intel's HT) already exists which have dramatically improved the performance of microprocessor cores. This paper briefs on evolution of multi-core processors followed by introducing the technology and its advantages in today's world. The paper concludes by detailing on the challenges currently faced by multi-core processors and how the industry is trying to address these issues.},
+	urldate = {2021-10-24},
+	journal = {arXiv:1110.3535 [cs]},
+	author = {Venu, Balaji},
+	month = oct,
+	year = {2011},
+	note = {arXiv: 1110.3535},
+	keywords = {Computer Science - Hardware Architecture},
+	annote = {Comment: 6 pages, Best Literature review},
+	file = {arXiv Fulltext PDF:/Users/neilweidinger/Zotero/storage/477ZBKFI/Venu - 2011 - Multi-core processors - An overview.pdf:application/pdf;arXiv.org Snapshot:/Users/neilweidinger/Zotero/storage/EL72J83J/1110.html:text/html},
+}
+
+@article{borkar_future_2011,
+	title = {The future of microprocessors},
+	volume = {54},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/1941487.1941507},
+	doi = {10.1145/1941487.1941507},
+	abstract = {Energy efficiency is the new fundamental limiter of processor performance, way beyond numbers of processors.},
+	number = {5},
+	urldate = {2021-10-27},
+	journal = {Communications of the ACM},
+	author = {Borkar, Shekhar and Chien, Andrew A.},
+	month = may,
+	year = {2011},
+	pages = {67--77},
+	file = {Full Text PDF:/Users/neilweidinger/Zotero/storage/TYF4E37D/Borkar and Chien - 2011 - The future of microprocessors.pdf:application/pdf},
+}
+
+@book{patterson_computer_2021,
+	address = {Cambridge, MA},
+	edition = {Second edition},
+	series = {{RISC}-{V} edition},
+	title = {Computer {Organization} and {Design}: {The} {Hardware} {Software} {Interface}},
+	isbn = {978-0-12-820331-6},
+	shorttitle = {Computer organization and design},
+	language = {eng},
+	publisher = {Elsevier},
+	author = {Patterson, David A. and Hennessy, John L.},
+	year = {2021},
 }
